Enable preview in the jib