@@ -30,7 +30,7 @@ jib {
 		}
 	}
 	container{
-		jvmFlags = ['-Dspring.profiles.active=prod']
+		jvmFlags = ['-Dspring.profiles.active=prod', '--enable-preview']
 	}
 }
 repositories {
